name:                haskoin
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskoin#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Haskoin.Types
                     , Haskoin.Mining
                     , Haskoin.Serialization
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , cryptonite
                     , comonad
                     , vector
                     , free
                     , bytestring
                     , lens
                     , binary
                     , memory
                     , vector-binary-instances
                     , base16-bytestring
                     , containers
                     , time
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskoin
