name:                haskoin
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskoin#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Haskoin.Types
                     , Haskoin.Mining
                     , Haskoin.Serialization
                     , Haskoin.Network
                     , Haskoin.Cli.New
                     , Haskoin.Cli.Mine
                     , Haskoin.Cli.ListBalances
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , cryptonite
                     , comonad
                     , vector
                     , free
                     , bytestring
                     , lens
                     , binary
                     , memory
                     , vector-binary-instances
                     , base16-bytestring
                     , containers
                     , time
                     , directory
                     , stm
                     , network
                     , http-conduit
                     , warp
                     , http-client
                     , wai
                     , text
                     , http-types
                     , cassava
  default-language:    Haskell2010

executable new
  hs-source-dirs:   app
  main-is:          New.hs
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base
                  , haskoin
  default-language: Haskell2010

executable mine
  hs-source-dirs:   app
  main-is:          Mine.hs
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base
                  , haskoin
  default-language: Haskell2010

executable list-balances
  hs-source-dirs:   app
  main-is:          ListBalances.hs
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base
                  , haskoin
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskoin
